# DOF-MESH

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CITADEL_HANDOVER.md  CLAUDE.md  CODEX_SYNC_STATE.md  CONTRIBUTING.md  DOF-MESH-STATE-CHECKPOINT-BRIDGE.md  DOF-MESH-Session-Report-2026-04-05-S7.html  DOF-MESH-Session-Report-2026-04-13-redteam.html  DOF-MESH-Session-Report-2026-04-13.html  DOF-MESH-Session8-Report-2026-04-12.html  Dockerfile  ENIGMA_AGENT_LINKS.md  ENIGMA_PORT_MAP.md  HEARTBEAT.md  LESSONS_LEARNED.md  LICENSE  MANIFEST.in  MEMORY.md  PROJECT_BRIEF.md  README.en.md  README.md  README_CONFLUX.md  READY_TO_PUBLISH.md  SECURE_PAYMENT_HANDLING.md  SECURITY.md  _index.md  a2a_server.py  check_governance_fields.py  crew.py  demo_dof_capabilities.py  dispatch_hackathon.py  docker-compose.yml  docs.json  dof.constitution.yml  generate_funding_link.py  hardhat.config.js  hardhat.config.v2.js  (+23 more)
.claude/: settings.json
api/: __init__.py  factory.py  server.py
certs/: client_commander.crt  client_mesh-node.crt  server.crt
changelog/: changelog.mdx
concepts/: formal-verification.mdx  governance-layers.mdx  mesh-nodes.mdx
config/: Modelfile.voice  Modelfile.voice-fast  agent.json  agent_teams_context.json  agents.yaml  autoresearch_overrides.json  litellm_config.yaml  logging.conf  tasks.yaml  tempo.json
constitution/: hash_beacon.py  integrity_watcher.py  update_coordinator.py
contracts/: DOFProofRegistry.sol  (+3 more)
core/: a_mem.py  (+177 more)
rust/dof_z3_gate/: Cargo.toml  README.md
rust/dof_z3_gate/src/: gate.rs  lib.rs
rust/dof_z3_gate/tests/: integration_test.rs
(+1057 files in other folders)
