[package]
name = "dof_z3_gate"
version = "0.1.0"
edition = "2021"
description = "DOF-MESH Z3 Gate — Rust implementation for <1ms governance verification"
authors = ["Cyber Paisa <jquiceva@gmail.com>"]
license = "Apache-2.0"

[lib]
name = "dof_z3_gate"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gate_benchmark"
harness = false
